[package]
    name    = "progresscafe"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    warp = "0.3"
    tokio = { version = "1", features = ["full"] }
    redis = { version = "0.22", features = [
        "aio",
        "connection-manager",
        "tokio-comp",
    ] }
    futures = "0.3"
    anyhow = "1"
